--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,12 +6,9 @@ version: 2.1
 
 jobs:
   build:
-    docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.7.1
-
     working_directory: ~/repo
+    docker:
+      - image: circleci/python:3.7.1
 
     steps:
       - checkout
@@ -35,7 +32,14 @@ jobs:
           key: v1-dependencies-{{ checksum "requirements.txt" }}
           paths:
             - ./venv
+  test:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/python:3.7.1
 
+    steps:
+      - attach_workspace:
+          at: ./
       - run:
           name: run tests
           command: |
@@ -54,8 +58,35 @@ jobs:
       - store_artifacts:
           path: artifacts
 
+  deploy_package:
+    working_directory: ~/repo
+    docker:
+      - image: circleci/python:3.7.1
+
+    steps:
+      - run:
+          name: create package
+          command: |
+            python setup.py build
+            VERSION=$(python setup.py --version)
+            
+      - run:
+          name: publish package
+          command: |
+            go get github.com/tcnksm/ghr
+            ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} -delete ${VERSION}
+
 workflows:
   version: 2
-  workflow:
+  build-and-deploy:
     jobs:
     - build
+    - test
+        requires:
+          - build
+    - deploy_package
+        requires:
+          - test
+        filters:
+          branches:
+            only: master
