--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
           command: |
             python setup.py build
             VERSION=$(python setup.py --version)
-            
+
       - run:
           name: publish package
           command: |
@@ -78,15 +78,15 @@ jobs:
 
 workflows:
   version: 2
-  build-and-deploy:
+  build-deploy:
     jobs:
-    - build
-    - test
-        requires:
-          - build
-    - deploy_package
-        requires:
-          - test
-        filters:
-          branches:
-            only: master
+      - build
+      - test:
+          requires:
+            - build
+      - deploy_package:
+          requires:
+            - test
+          filters:
+            branches:
+              only: master
