--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,7 @@ jobs:
       - run:
           name: create package
           command: |
-            pip install --upgrade setuptools wheel
+            pip install --user --upgrade setuptools wheel
             python setup.py sdist bdist_wheel
             VERSION=$(python setup.py --version)
 
