working on workspace2

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,14 +70,11 @@ jobs:
       - attach_workspace:
           at: ./packages
       - run:
-          name: list packages
-          command: ls -l ./packages
-      - run:
           name: publish package
           command: |
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} \
             -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} \
-            -delete ${VERSION} "release-$(cat build/version.txt)" ./packages
+            -delete ${VERSION} "release-$(cat packages/version.txt)" ./packages
 
 workflows:
   version: 2
