--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -44,3 +44,33 @@ jobs:
       run: |
         python-codacy-coverage -r test-results/coverage.xml    
     
+    - name: create package
+      run: |
+          pip install --user --upgrade setuptools wheel pkutils
+          python setup.py sdist bdist_wheel
+          python setup.py --version >dist/version.txt
+
+    - name: publish package to github as a release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+          body: |
+            Changes in this Release
+            - First Change
+            - Second Change
+        draft: false
+        prerelease: false
+
+    - name: Upload Release Asset
+      id: upload-release-asset
+      uses: actions/upload-release-asset@v1.0.1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
+        asset_path: ./packages
+        asset_name: testclass_package
