--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -53,7 +53,8 @@ jobs:
 
     - name: publish package to github as a release
       id: create_release
-      uses: actions/create-release@v1
+      uses:
+         - actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VERSION: $(cat dist/version.txt)
