--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,7 +58,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         VERSION: $(cat dist/version.txt)
       with:
-        tag_name: release-1.1.0
+        tag_name: v1.1.0
         release_name: release-1.1.0
         body: |
           Changes in this Release
