--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -49,17 +49,17 @@ jobs:
           pip install --user --upgrade setuptools wheel pkutils
           python setup.py sdist bdist_wheel
           python setup.py --version >dist/version.txt
-          cat dist/version.txt
+          ls -l dist
 
     - name: publish package to github as a release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VERSION: $(cat dist/version.txt)
+        VERSION: 1.1.0
       with:
-        tag_name: v1.1.0
-        release_name: release-1.1.0
+        tag_name: v${VERSION}
+        release_name: release-${VERSION}
         body: |
           Changes in this Release
           - First Change
@@ -74,6 +74,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./dist
+        asset_path: ./dist/testclass-${VERSION}*
         asset_name: testclass_package
         asset_content_type: application/zip
