--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -41,9 +41,12 @@ jobs:
     - name: Publish reports
       env:
         CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
+        VERSION: 1.1.0
       run: |
         echo "CODACY"
-        echo ${CODACY_PROJECT_TOKEN}
+        echo ${VERSION}
+        echo $VERSION
+        echo ${{ VERSION }}
     
     - name: create package
       run: |
