still trying to get version to work

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
           command: |
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} \
             -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} \
-            -delete ${VERSION} "release-$(cat packages/version.txt)" ./packages
+            -delete ${VERSION} "release-$(cat dist/version.txt)" ./packages
 
 workflows:
   version: 2
