still trying to get circleci working again

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,10 +69,11 @@ jobs:
       - run:
           name: publish package
           command: |
-            ls -l packages
+            TAG="release-$(cat packages/version.txt)"
+            echo ${TAG}
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} \
             -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} \
-            -delete ${VERSION} "release-$(cat packages/version.txt)" ./packages
+            -delete ${VERSION} ${TAG} ./packages
 
 workflows:
   version: 2
