--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,13 +69,14 @@ jobs:
       - run:
           name: publish package
           command: |
-            TAG="release-$(cat packages/version.txt)"
-            echo "Tag: ${TAG}"
-            VERSION=${TAG}
-            echo "Version: ${VERSION}"
+            echo "token: ${GITHUB_TOKEN}"
+            echo "sha: ${CIRCLE_SHA1}"
+            echo "circle tag: ${CIRCLE_TAG}"
+            ls -l packages
+            VERSION="release-$(cat packages/version.txt)"
             ghr -t ${GITHUB_TOKEN} -u ${CIRCLE_PROJECT_USERNAME} \
             -r ${CIRCLE_PROJECT_REPONAME} -c ${CIRCLE_SHA1} \
-            -delete ${VERSION} ${TAG} ./packages
+            -delete ${VERSION} ${VERSION} ./packages
 
 workflows:
   version: 2
