figuring out variables

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -53,23 +53,19 @@ jobs:
         pip install --user --upgrade setuptools wheel pkutils
         python setup.py sdist bdist_wheel
         python setup.py --version >dist/version.txt
-        ls -l ./dist
 
-    - name: test variable
-      env:
-        VERSION: ${{ cat dist/version.txt }}
-      run: |
-        echo "version: $VERSION"
+    - name: set version
+      run: echo ::set-env name=VERSION::$(cat dist/version.txt)
 
     - name: publish package to github as a release
       id: create_release
       uses: actions/create-release@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VERSION: 1.1.0
+        RELEASE: "release-${{ env.VERSION }}
       with:
-        tag_name: "release-$VERSION"
-        release_name: "release-$VERSION"
+        tag_name: ${{ env.RELEASE }}
+        release_name: ${{ env.RELEASE }}
         body: |
           Changes in this Release
           - First Change
@@ -82,9 +78,8 @@ jobs:
       uses: actions/upload-release-asset@v1.0.1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        VERSION: 1.1.0
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: ./dist/testclass-${{ VERSION }}.tar.gz
+        asset_path: ./dist/testclass-${{ env.VERSION }}.tar.gz
         asset_name: testclass_package
         asset_content_type: application/zip
