--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,9 +58,11 @@ jobs:
       run: |
         echo ::set-env name=VERSION::$(cat dist/version.txt)
         echo ::set-env name=RELEASE::release-${{ env.VERSION }}
+        echo $RELEASE
+        echo ${{ env.RELEASE }}
     - name: test release
       run: |
-        echo "release: ${{ env.RELEASE }}"
+        echo "release: ${{ env.VERSION }}"
         echo "release2: $RELEASE"
 
     - name: publish package to github as a release
