--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -57,7 +57,7 @@ jobs:
     - name: set version and release
       run: |
         echo ::set-env name=VERSION::$(cat dist/version.txt)
-        echo ::set-env name=RELEASE::"release-$VERSION"
+        echo ::set-env name=RELEASE::$(echo "release-$VERSION")
         echo $RELEASE
         echo ${{ env.RELEASE }}
     - name: test release
