--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,6 +58,8 @@ jobs:
       run: |
         echo ::set-env name=VERSION::$(cat dist/version.txt)
         echo ::set-env name=RELEASE::$(echo "release-$VERSION")
+        echo "release-$VERSION"
+        echo ::set-env name=RELEASE::release-$(cat dist/version.txt)
         echo $RELEASE
         echo ${{ env.RELEASE }}
     - name: test release
