--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,11 +58,10 @@ jobs:
         echo ::set-env name=VERSION::$(python setup.py --version)
         echo ::set-env name=RELEASE::release-$(python setup.py --version)
         echo ::set-env name=ASSET_PATH::dist/testclass-$(python setup.py --version).tar.gz
-        echo "release: $RELEASE"
-        echo "version: $VERSION"
-        echo "asset: $ASSET_PATH"
-        python setup.py --version
-        
+        echo release: $RELEASE
+        echo version: $VERSION
+        echo asset: $ASSET_PATH
+
     - name: publish package to github as a release
       id: create_release
       uses: actions/create-release@v1
