--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,6 +58,8 @@ jobs:
         echo ::set-env name=VERSION::$(python setup.py --version)
         echo ::set-env name=RELEASE::release-$(python setup.py --version)
         echo ::set-env name=ASSET_PATH::dist/testclass-$(python setup.py --version).tar.gz
+    - name: show variables
+      run: |
         echo release: ${{ env.RELEASE }}
         echo version: $VERSION
         echo asset: $ASSET_PATH
