--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -58,11 +58,6 @@ jobs:
         echo ::set-env name=VERSION::$(python setup.py --version)
         echo ::set-env name=RELEASE::release-$(python setup.py --version)
         echo ::set-env name=ASSET_PATH::dist/testclass-$(python setup.py --version).tar.gz
-    - name: show variables
-      run: |
-        echo release: ${{ env.RELEASE }}
-        echo version: $VERSION
-        echo asset: $ASSET_PATH
 
     - name: publish package to github as a release
       id: create_release
@@ -70,8 +65,8 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        tag_name: $RELEASE
-        release_name: $RELEASE
+        tag_name: ${{ env.RELEASE }}
+        release_name: ${{ env.RELEASE }}
         body: |
           Changes in this Release
           - First Change
@@ -86,6 +81,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
-        asset_path: $ASSET_PATH
+        asset_path: ${{ env.ASSET_PATH }}
         asset_name: testclass_package
         asset_content_type: application/zip
