--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -56,7 +56,7 @@ jobs:
         echo ::set-env name=RELEASE::release-$(python setup.py --version)
         echo ::set-env name=ASSET_PATH::dist/testclass-$(python setup.py --version)-py3-none-any.whl
 
-    - name: publish package to github as a release
+    - name: create release
       id: create_release
       uses: actions/create-release@v1
       env:
@@ -66,10 +66,9 @@ jobs:
         release_name: ${{ env.RELEASE }}
         body: |
           Changes in this Release
-          - First Change
-          - Second Change
         draft: false
         prerelease: false
+      continue-on-error: true
 
     - name: Upload Release Asset
       id: upload-release-asset
