change asset name

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -55,6 +55,7 @@ jobs:
         echo ::set-env name=VERSION::$(python setup.py --version)
         echo ::set-env name=RELEASE::release-$(python setup.py --version)
         echo ::set-env name=ASSET_PATH::dist/testclass-$(python setup.py --version)-py3-none-any.whl
+        echo ::set-env name=ASSET_NAME::testclass-$(python setup.py --version)-py3-none-any.whl
 
     - name: create release
       id: create_release
@@ -77,5 +78,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
         asset_path: ${{ env.ASSET_PATH }}
-        asset_name:  ${{ env.ASSET_PATH }}
+        asset_name:  ${{ env.ASSET_NAME }}
         asset_content_type: application/zip
