always report success on report publish

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -43,7 +43,8 @@ jobs:
       env:
         CODACY_PROJECT_TOKEN: ${{ secrets.CODACY_PROJECT_TOKEN }}
       run: |
-        python-codacy-coverage -r test-results/coverage.xml
+        # Always return success
+        python-codacy-coverage -r test-results/coverage.xml || true
 
     - name: create package
       run: |
