--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -4,12 +4,11 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 2
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.9", "3.10"]
 
     steps:
     - uses: actions/checkout@v1
@@ -50,6 +49,23 @@ jobs:
         # Always return success
         python-codacy-coverage -r test-results/coverage.xml || true
 
+  package:
+    runs-on: ubuntu-latest
+    needs: [ build ]
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Set up Python
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.10
+
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: create package
       run: |
         pip install --user --upgrade setuptools wheel pkutils
@@ -71,7 +87,7 @@ jobs:
         tag_name: ${{ env.RELEASE }}
         release_name: ${{ env.RELEASE }}
         body: |
-          Changes in this Release
+          New release: ${{ env.RELEASE }}
         draft: false
         prerelease: false
 
